Got rid off the background class on my about me and blog page until I can figure out whats causing the background bug. I also changed my bodies overflow to auto to keep my scroll wheel working.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
     font-family: 'IBM Plex Sans', sans-serif;
   }
 
@@ -17,6 +17,7 @@ header {
     overflow: hidden;
     background-color: #78909C;
     width: 100%;
+    position: absolute;
   }
   
   .navbar a {
